# shipgit

./: .gitignore  .shipgit.yml  README.md  pyproject.toml  requirements.txt
scripts/: install.ps1  test_distribution.ps1  test_shipgit.ps1  test_shipgit_isolated.ps1  uninstall.ps1  update.ps1
shipgit/: __init__.py  checks.py  config.py  git_runner.py  guide.py  i18n.py  main.py  publisher.py  tester.py
